--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,8 +1,6 @@
 .wrapper {
   padding-left: 18px;
   padding-right: 18px;
-  /*overflow-x: hidden;
-  overflow-y: hidden;*/
 
   &--site-header {
     display: flex;
@@ -14,6 +12,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 
   &--site-footer {
@@ -33,9 +32,9 @@
       margin-left: 0;
     }
     &__video {
-      padding: 10px 0px; /*top/bottom right/left*/
+      padding: 10px 0px; /*t/b r/l*/
       @mixin atMin1200Wide {
-        padding: 20px 5px 20px 5px; /*top right bottom left*/
+        padding: 20px 5px 20px 5px; /*t r b l*/
       }
     }
   }
@@ -76,11 +75,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 10px 20px 10px; /*top right bottom left*/
-    /*border: 1px solid #bfbfbf;*/
+    padding: 10px 10px 20px 10px; /*t r b l*/
     background-color: white;
     color: $bodyLiteBGFontColor;
-    /*cursor: pointer;*/
     &:hover {
       border-radius: 5%;
       transition: border-radius 0.1s ease-in-out;
@@ -105,7 +102,6 @@
     height: 100vh;
     width: 100%;
     top: $horizontalMenuBarHeight;
-    /*border: 2px solid yellow;*/
     &--fullscreen {
       top: 0;
     }
