--- a/app/assets/styles/modules/_lightbox.css
+++ b/app/assets/styles/modules/_lightbox.css
@@ -14,10 +14,96 @@
       right: 30px;
       opacity: 1;
       left: 0;
-      transition: opacity $menuVisibilityTransition $timingFunction;
+      transition: opacity $menuVisibilityTransition $cb-ease-in-out;
       z-index: $zIndex-1-FirstLevel;
       @mixin atMin200Wide {
         right: 0;
+      }
+    }
+  }
+
+  &__image-overlay {
+    opacity: 0;
+    transform: scale(0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: $lightboxImageOverlayBackgroundColor;
+    z-index: $zIndex--1-BelowAll;
+    transition: opacity $menuVisibilityTransition, transform $transitionDuration $cb-ease-in-out;
+
+    &--visible {
+      opacity: 1;
+      height: 100vh;
+      transform: scale(1);
+      left: 16px;
+      right: 16px;
+      overflow-y: auto;
+      z-index: $zIndex-2-SecondLevel;
+    }
+
+    &__selectedImg {
+      display: flex;
+      justify-content: center;
+    }
+
+    figure {
+      background-color: $HeaderFooterLiteBackground;
+      border: 4px solid black;
+      margin: 0;
+      padding: 5px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    figcaption {
+      font-size: 1.5rem;
+      inline-size: 20ch;
+      padding: 5px 15px;
+
+      @mixin atMin620Wide {
+        inline-size: 35ch;
+      }
+      @mixin atMin760Wide {
+        inline-size: 47ch;
+      }
+      @mixin atMin800Wide {
+        inline-size: 55ch;
+      }
+      @mixin atMin900Wide {
+        inline-size: 60ch;
+      }
+      @mixin atMin1020Wide {
+        inline-size: 70ch;
+      }
+      @mixin atMin2000Wide {
+        inline-size: 140ch;
+      }
+    }
+
+    &__close-btn {
+      position: absolute;
+      top: 18px;
+      right: 16px;
+      background: transparent;
+      border: 0;
+      outline: 0;
+      svg {
+        fill: rgba(0, 0, 0, 0.3);
+      }
+      &:focus {
+        svg {
+          fill: rgba(0, 0, 0, 0.8);
+        }
+        path {
+          stroke-width: 2.5px;
+        }
       }
     }
   }
@@ -33,7 +119,7 @@
     right: 0;
     background-color: $lightboxPhotoOverlayBackgroundColor;
     z-index: $zIndex--1-BelowAll;
-    transition: opacity $menuVisibilityTransition, transform $transitionDuration $timingFunction;
+    transition: opacity $menuVisibilityTransition, transform $transitionDuration $cb-ease-in-out;
 
     &--visible {
       right: 30px;
