--- a/app/assets/styles/modules/_page.css
+++ b/app/assets/styles/modules/_page.css
@@ -1,14 +1,24 @@
 .page {
-  /*padding-bottom: 15px;*/
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*border: 2px solid red;*/
 
   p {
     font-size: 1.5rem;
+    /*line-height: 1.5; 2/23/2025 */
+    line-height: 1.45;
+    margin-top: 15px;
+  }
+  p.sidebar {
+    font-size: 1.2rem;
     line-height: 1.5;
     margin-top: 15px;
+  }
+  p.dropCap::first-letter {
+    float: left;
+    font-size: 4.8rem;
+    font-weight: 500;
+    line-height: 0.9;
   }
 
   /* are these needed? 
