--- a/app/assets/styles/modules/_screen-reader.css
+++ b/app/assets/styles/modules/_screen-reader.css
@@ -1,8 +1,8 @@
 .screen-reader {
-    /* hide this text off the screen */
-    height:1px;
-    width: 1px;
-    position: absolute;
-    overflow: hidden;
-    top: -10px;
+  /* hide text */
+  height: 1px;
+  width: 1px;
+  position: absolute;
+  overflow: hidden;
+  top: -10px;
 }
