--- a/app/assets/styles/modules/_slideshow.css
+++ b/app/assets/styles/modules/_slideshow.css
@@ -20,9 +20,8 @@
       justify-content: center; /* portrait images */
       opacity: 0;
       position: absolute;
-      transition: opacity $slideTransition ease-in;
+      transition: opacity $slideTransition $cb-ease-in;
       width: 100%;
-      /*height: calc(100% - 90px); ? what was this for*/
       height: 100%;
 
       &--is-visible {
@@ -36,7 +35,7 @@
       .slide-image {
         height: auto;
         max-width: 100%;
-        object-fit: contain; /*on picture element, object-fit requires height and width values*/
+        object-fit: contain; /*object-fit requires height and width*/
         object-position: 50% 50%;
         width: auto;
       }
@@ -107,7 +106,7 @@
     font-weight: 700;
     background: $albumPhotoCaptionBackgroundColor;
     opacity: 1;
-    transition: all $photoCaptionTransition ease-in;
+    transition: all $photoCaptionTransition $cb-ease-in;
     z-index: $zIndex-1-FirstLevel;
 
     &--is-collapsed {
@@ -116,7 +115,7 @@
 
     &--is-hidden {
       left: -200px;
-      transition: all 0.01s ease-in;
+      transition: all 0.01s $cb-ease-in;
     }
 
     &__button {
@@ -162,14 +161,14 @@
         stroke-width: 3px;
         transition-duration: $menuVisibilityTransition;
         transition-property: all;
-        transition-timing-function: $timingFunction;
+        transition-timing-function: $cb-ease-in-out;
       }
     }
   }
 
   &__slide-caption {
     color: $albumPhotoCaptionBackgroundColor; /* hide caption - make text the same color as background */
-    transition: color $slideTransition ease-in-out;
+    transition: color $slideTransition $cb-ease-in-out;
 
     &--is-visible {
       color: #000;
@@ -182,13 +181,13 @@
 
   &__vcr-container {
     position: absolute;
-    transition: opacity $menuButtonOutlineTransition ease-out;
+    transition: opacity $menuButtonOutlineTransition $cb-ease-out;
     /*top: calc(100% - 60px); 1/16*/
     top: 55%;
     left: 50%;
     transform: translateX(-50%);
-    width: 300px;
-    height: 56px;
+    width: 350px;
+    height: 65px;
     border-radius: 40px;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
@@ -197,17 +196,19 @@
     justify-content: space-evenly;
     border: 1px solid yellow;
 
-    /*@mixin atMaxWidthForVisibleMenuIcon {
-      bottom: 10px;
-    }*/
-
     &--fullscreen {
       bottom: 0;
     }
     @mixin atMinWidthToHideeMenuIcon {
-      top: calc(100vh - 165px);
+      top: calc(100vh - 220px);
       &--fullscreen {
-        top: calc(100vh - 65px);
+        top: calc(100vh - 120px);
+      }
+    }
+    @mixin atMin1200Wide {
+      top: calc(100vh - 170px);
+      &--fullscreen {
+        top: calc(100vh - 70px);
       }
     }
 
