--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -58,29 +58,40 @@
       background-color: #fff;
       &:hover {
         border-radius: 5%;
-        transition: border-radius 0.1s ease-in-out;
+        transition: border-radius 0.1s $cb-ease-in-out;
       }
       &:focus-visible {
         border-radius: 5%;
-        transition: border-radius 0.1s ease-in-out;
+        transition: border-radius 0.1s $cb-ease-in-out;
         div {
           border-radius: 5%;
-          transition: border-radius 0.1s ease-in-out;
+          transition: border-radius 0.1s $cb-ease-in-out;
         }
       }
     }
+  }
+
+  &--image {
+    cursor: pointer;
+    padding: 0px 0px 20px 0px;
+    border: 0;
+    width: 100%; /* 2/22/25 */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
   }
 
   &--album-photo-polaroid {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 10px 20px 10px; /*t r b l*/
+    padding: 10px 10px 20px 10px;
     background-color: white;
     color: $bodyLiteBGFontColor;
     &:hover {
       border-radius: 5%;
-      transition: border-radius 0.1s ease-in-out;
+      transition: border-radius 0.1s $cb-ease-in-out;
     }
     img {
       max-height: 213px;
@@ -125,7 +136,7 @@
 
   @mixin atMin820Wide {
     &--album {
-      top: 30px;
+      /*top: 30px; 2/21/25*/
       max-width: 820px;
       &--pull-left {
         margin-left: auto;
@@ -153,7 +164,7 @@
       width: 1000px;
     }
     &--album {
-      top: 30px;
+      /*top: 30px; 2/21/25*/
       max-width: 1200px;
       &--pull-left {
         margin-left: auto;
@@ -186,7 +197,7 @@
       width: 1700px;
     }
     &--album {
-      top: 30px;
+      /*top: 30px; 2/21/25*/
       max-width: 1700px;
       &--pull-left {
         margin-left: auto;
