Minor adjustments to grid

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -10,7 +10,7 @@ body,
     "head"
     "main"
     "footer";
-  grid-template-rows: 100px 1fr 120px;
+  grid-template-rows: 100px 1fr 140px;
 
   @mixin atMin800Wide {
     grid-template-rows: 100px 1fr 75px;
@@ -22,6 +22,7 @@ body,
 }
 #app > main {
   grid-area: main;
+  max-width: 100vw;
 }
 #app > footer {
   grid-area: footer;
@@ -47,7 +48,8 @@ body.light {
 }
 
 .no-scroll {
-  overflow: hidden;
+  /*overflow: auto;*/ /* revert to default because hidden causes menu to jump on x axis */
+  overflow: hidden; /* need hidden for album, so added logic to detect scroll height*/
 }
 
 a.social {
