--- a/app/assets/styles/modules/_page.css
+++ b/app/assets/styles/modules/_page.css
@@ -9,6 +9,37 @@
     line-height: 1.45;
     margin-top: 15px;
   }
+  span.note {
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    &:first-child {
+      margin-top: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  p.note {
+    margin: 30px 0;
+    padding: 20px 10px 30px 10px;
+    border-top: 2px solid black;
+    border-radius: 10px;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    border-left: 4px solid black;
+    background-color: $HeaderFooterLiteBackground;
+    font-size: 1.4rem;
+  }
+  p.code {
+    margin: 30px 0;
+    padding: 20px 10px 20px 10px;
+    border-radius: 10px;
+    font-family: monospace;
+    color: rgb(212, 212, 212);
+    background-color: rgb(27, 39, 79);
+    font-size: 1.4rem;
+  }
   p.sidebar {
     font-size: 1.2rem;
     line-height: 1.5;
@@ -19,6 +50,23 @@
     font-size: 4.8rem;
     font-weight: 500;
     line-height: 0.9;
+  }
+  p.dropCapNote::first-letter {
+    float: left;
+    font-size: 4.8rem;
+    font-weight: 500;
+    line-height: 0.8;
+  }
+
+  ol,
+  ul {
+    margin-block-end: 1.5em;
+  }
+  ol > li > ol {
+    margin-block-end: 0;
+  }
+  ul > li > ul {
+    margin-block-end: 0;
   }
 
   /* are these needed? 
