--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -26,7 +26,8 @@
 
   &__breadcrumb {
     display: block;
-    position: relative;
+    position: fixed;
+    top: $horizontalMenuBarHeight;
     width: 100%;
     background-color: $bodyLiteBGColor;
     padding: 10px 0;
@@ -37,13 +38,14 @@
     }
     &__fixed {
       position: fixed;
-      top: 0;
+      top: -100px;
       padding: 10px 0;
       transition: all $transitionDuration_siteHeaderMenuVisibilityOnScroll $cb-ease-in-out;
     }
     &__scroll-up {
-      position: fixed;
-      /*top: 89px; 2/21/2025*/
+      @mixin atMaxWidthForVisibleMenuIcon {
+        top: $horizontalMenuBarHeight;
+      }
     }
     &--transparent {
       background-color: $HeaderFooterDarkBackgroundTransparent;
@@ -109,15 +111,11 @@
   }
 
   @mixin atMaxWidthForVisibleMenuIcon {
-    height: 90px;
+    height: 100px;
     right: 0px;
     padding-top: 0;
-    width: 100%;
-    &__breadcrumb {
-      &__fixed {
-        top: 0;
-      }
-    }
+    width: 100vw;
+    left: 0;
     [class*="col-"] {
       width: 100%;
     }
