--- a/app/assets/styles/modules/_page.css
+++ b/app/assets/styles/modules/_page.css
@@ -21,7 +21,7 @@
     }
   }
   p.note {
-    margin: 30px 0;
+    margin: 30px 15px;
     padding: 20px 10px 30px 10px;
     border-top: 2px solid black;
     border-radius: 10px;
@@ -30,6 +30,7 @@
     border-left: 4px solid black;
     background-color: $HeaderFooterLiteBackground;
     font-size: 1.4rem;
+    font-style: italic;
   }
   p.code {
     margin: 30px 0;
@@ -50,12 +51,14 @@
     font-size: 4.8rem;
     font-weight: 500;
     line-height: 0.9;
+    padding-right: 4px;
   }
   p.dropCapNote::first-letter {
     float: left;
     font-size: 4.8rem;
     font-weight: 500;
     line-height: 0.8;
+    padding-right: 10px;
   }
 
   ol,
