--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -41,6 +41,16 @@
       font-size: 3rem;
     }
   }
+  &__h2-contents {
+    font-size: 1.75rem;
+    font-weight: 400;
+    padding: 10px 0;
+    margin: 0;
+
+    @mixin atMin1200Wide {
+      font-size: 2rem;
+    }
+  }
 
   &__h3 {
     font-size: 1.75rem;
@@ -64,6 +74,17 @@
     font-size: 2.5rem;
     font-weight: 300;
     font-style: normal;
+  }
+
+  &__h3-album-slideshow {
+    font-size: 1.4rem;
+    line-height: 1.45;
+    margin-top: 15px;
+    font-weight: normal;
+
+    @mixin atMin1200Wide {
+      font-size: 1.5rem;
+    }
   }
 
   &__h3-album-thumbnail {
