--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -55,6 +55,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-width: 340px;
       background-color: #fff;
       &:hover {
         border-radius: 5%;
