--- a/app/assets/styles/modules/_menu-item.css
+++ b/app/assets/styles/modules/_menu-item.css
@@ -26,6 +26,10 @@
     padding-left: 10px;
     padding-right: 10px;
 
+    &__active {
+      text-decoration: underline;
+    }
+
     &--dark {
       color: $bodyDarkBGFontColor;
       &:hover {
