--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -54,6 +54,7 @@
   }
 
   &__h3 {
+    font-family: "Cormorant Garamond";
     font-size: 1.75rem;
     font-weight: 400;
     padding: 10px 0;
@@ -104,6 +105,7 @@
   }
 
   &__h4 {
+    font-family: "Cormorant Garamond";
     font-size: 1.5rem;
     font-weight: 400;
     padding: 10px 0;
