--- a/app/assets/styles/modules/_nav.css
+++ b/app/assets/styles/modules/_nav.css
@@ -33,11 +33,6 @@
     transition-duration: $menuButtonOutlineTransition;
     transition-timing-function: $cb-ease-in-out;
 
-    &--selected {
-      text-decoration: underline;
-      text-underline-offset: 0.1em;
-      text-decoration-thickness: 3px;
-    }
     &--dark {
       color: $bodyDarkBGFontColor;
       &:focus {
@@ -64,7 +59,6 @@
       }
     }
     &--icon-rotate-180 {
-      /* rotate icon 180 deg */
       transform: translateX(0) translateY(0) rotate(180deg) skewX(0) skewY(0) scaleX(1) scaleY(1);
     }
     svg {
@@ -77,11 +71,6 @@
     }
 
     &:hover {
-      text-decoration: underline;
-      text-underline-offset: 0.1em;
-      text-decoration-thickness: 3px;
-    }
-    &:active {
       text-decoration: underline;
       text-underline-offset: 0.1em;
       text-decoration-thickness: 3px;
@@ -103,7 +92,7 @@
       left: calc(100% - $verticalMenuBarWidth); /* transition requires left value*/
       right: 0;
       width: $verticalMenuBarWidth;
-      height: 100%;
+      height: 100vh;
       max-height: calc(100vh - 90px);
       opacity: 1;
       background: rgba(0, 0, 0, 0.9);
@@ -183,6 +172,12 @@
       font-size: 1.45rem;
       line-height: 1.25;
       font-weight: 500;
+      &--dark {
+        text-decoration-color: $bodyLiteBGFontColor;
+      }
+      &--lite {
+        text-decoration-color: $bodyDarkBGFontColor;
+      }
     }
   }
 }
