--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -6,18 +6,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: transform $transitionDuration_siteHeaderMenuVisibilityOnScroll $cb-ease-in-out;
 
   &--slideshow {
     background-color: $HeaderFooterDarkBackgroundTransparent;
   }
 
   &--collapse {
-    top: -100px;
-    transition: top $transitionDuration_siteHeaderMenuVisibilityOnScroll $cb-ease-in-out;
+    transform: translateY(-100px);
   }
   &--expand {
-    top: 0;
-    transition: top $transitionDuration_siteHeaderMenuVisibilityOnScroll $cb-ease-in-out;
+    transform: translateY(0);
   }
 
   &--dark {
@@ -25,9 +24,9 @@
   }
 
   &__breadcrumb {
-    display: block;
     position: fixed;
-    top: $horizontalMenuBarHeight;
+    transform: translateY(0);
+    will-change: transform;
     width: 100%;
     background-color: $bodyLiteBGColor;
     padding: 10px 0;
@@ -37,15 +36,7 @@
       background-color: $bodyDarkBGColor;
     }
     &__fixed {
-      position: fixed;
-      top: -100px;
-      padding: 10px 0;
-      transition: all $transitionDuration_siteHeaderMenuVisibilityOnScroll $cb-ease-in-out;
-    }
-    &__scroll-up {
-      @mixin atMaxWidthForVisibleMenuIcon {
-        top: $horizontalMenuBarHeight;
-      }
+      transform: translateY(-150px);
     }
     &--transparent {
       background-color: $HeaderFooterDarkBackgroundTransparent;
