--- a/app/assets/styles/modules/_album-photos.css
+++ b/app/assets/styles/modules/_album-photos.css
@@ -74,7 +74,7 @@
         background: $albumPhotoCaptionBackgroundHoverColor;
       }
 
-      &:focus {
+      &:focus-visible {
         background: $albumPhotoCaptionBackgroundHoverColor;
       }
 
