--- a/app/assets/styles/modules/_page.css
+++ b/app/assets/styles/modules/_page.css
@@ -56,6 +56,7 @@
   }
   p.dropCapNote::first-letter {
     float: left;
+    font-family: "Cormorant Garamond";
     font-size: 4.8rem;
     font-weight: 500;
     line-height: 0.8;
