--- a/app/assets/styles/modules/_nav.css
+++ b/app/assets/styles/modules/_nav.css
@@ -25,13 +25,10 @@
     cursor: pointer;
     white-space: nowrap;
     background-color: transparent;
-    margin: 0;
-    margin-right: 4px;
+    margin: 0 4px 0 0;
     outline-offset: 2px;
     border-radius: 9999px;
-    transition-property: outline;
-    transition-duration: $menuButtonOutlineTransition;
-    transition-timing-function: $cb-ease-in-out;
+    transition: outline $menuButtonOutlineTransition $cb-ease-in-out;
 
     &--dark {
       color: $bodyDarkBGFontColor;
@@ -65,9 +62,7 @@
       height: 16px;
       width: 16px;
       z-index: $zIndex-1-FirstLevel;
-      transition-duration: $menuVisibilityTransition;
-      transition-property: all;
-      transition-timing-function: $cb-ease-in-out;
+      transition: all $menuVisibilityTransition $cb-ease-in-out;
     }
 
     &:hover {
@@ -169,9 +164,7 @@
     }
 
     &__button {
-      font-size: 1.45rem;
-      line-height: 1.25;
-      font-weight: 500;
+      font: 500 1.45rem/1.25 $globalFontFamily;
       &--dark {
         text-decoration-color: $bodyLiteBGFontColor;
       }
