--- a/app/assets/styles/modules/_accessibility.css
+++ b/app/assets/styles/modules/_accessibility.css
@@ -10,7 +10,7 @@
 
   &__skiptocontent {
     outline-style: none;
-    padding: 10px 30px; /*t r b l*/
+    padding: 10px 30px;
     position: absolute;
     height: 70px;
     top: -100px;
