--- a/app/assets/styles/modules/_album-photos.css
+++ b/app/assets/styles/modules/_album-photos.css
@@ -1,9 +1,4 @@
 .album-photos {
-  display: grid;
-  gap: 10px;
-  justify-content: center;
-  padding-bottom: 50px;
-
   &--pull-left {
     padding-top: 0px;
     padding-bottom: 10px;
@@ -25,12 +20,9 @@
     width: 200px;
     transform: translateY(-50%);
     padding: 5px 20px 5px 3px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    font-family: "Tangerine", sans-serif;
+    border-radius: 0 5px 5px 0;
+    font: 700 2rem "Tangerine", sans-serif;
     text-align: center;
-    font-size: 2em;
-    font-weight: 700;
     background: $albumPhotoCaptionBackgroundColor;
     opacity: 1;
     transition: all $photoCaptionTransition $cb-ease-in;
@@ -65,8 +57,7 @@
       align-items: center;
       background-color: $albumPhotoCaptionBackgroundColor;
       text-decoration: none;
-      border-top-right-radius: 5px;
-      border-bottom-right-radius: 5px;
+      border-radius: 0 5px 5px 0;
       z-index: $zIndex-1-FirstLevel;
 
       &:hover {
@@ -93,9 +84,7 @@
         height: 16px;
         width: 16px;
         stroke-width: 3px;
-        transition-duration: $menuVisibilityTransition;
-        transition-property: all;
-        transition-timing-function: $cb-ease-in-out;
+        transition: all $photoCaptionTransition $cb-ease-in-out;
       }
     }
   }
