--- a/app/assets/styles/modules/_lightbox.css
+++ b/app/assets/styles/modules/_lightbox.css
@@ -54,7 +54,7 @@
     }
 
     figure {
-      background-color: $HeaderFooterLiteBackground;
+      background-color: $lightboxImageOverlayBackgroundColor;
       border: 4px solid black;
       margin: 0;
       padding: 5px;
@@ -181,6 +181,7 @@
     }
 
     &--spinner {
+      position: absolute;
       margin: auto;
       border-radius: 50%;
       width: 36px;
@@ -189,6 +190,14 @@
       border-top-color: #686868;
       -webkit-animation: spin 1s infinite linear;
       animation: spin 1s infinite linear;
+      z-index: $zIndex--1-BelowAll;
+      &--slide {
+        top: 50%;
+      }
+      &--image {
+        top: 50%;
+        left: 50%;
+      }
     }
     @-moz-keyframes spin {
       from {
@@ -230,7 +239,6 @@
     img {
       max-width: 100%;
       height: auto;
-      /*object-fit: contain;*/
       object-position: 50% 50%;
     }
   }
