--- a/app/assets/styles/modules/_page.css
+++ b/app/assets/styles/modules/_page.css
@@ -5,7 +5,6 @@
 
   p {
     font-size: 1.4rem;
-    /*line-height: 1.5; 2/23/2025 */
     line-height: 1.45;
     margin-top: 15px;
   }
@@ -23,23 +22,19 @@
   p.note {
     margin: 30px 15px;
     padding: 20px 10px 30px 10px;
-    border-top: 2px solid black;
+    border: 2px solid black;
+    border-left-width: 4px;
     border-radius: 10px;
-    border-right: 2px solid black;
-    border-bottom: 2px solid black;
-    border-left: 4px solid black;
     background-color: $HeaderFooterLiteBackground;
-    font-size: 1.4rem;
-    font-style: italic;
+    font: italic 1.4rem/1.45 $globalFontFamily;
   }
   p.code {
     margin: 30px 0;
     padding: 20px 10px 20px 10px;
     border-radius: 10px;
-    font-family: monospace;
+    font: 1.4rem/1.45 monospace;
     color: rgb(212, 212, 212);
     background-color: rgb(27, 39, 79);
-    font-size: 1.4rem;
   }
   p.sidebar {
     font-size: 1.2rem;
@@ -48,18 +43,12 @@
   }
   p.dropCap::first-letter {
     float: left;
-    font-family: "Cormorant Garamond";
-    font-size: 4.9rem;
-    font-weight: 500;
-    line-height: 0.8;
+    font: 500 4.9rem/0.8 "Cormorant Garamond";
     padding-right: 4px;
   }
   p.dropCapNote::first-letter {
     float: left;
-    font-family: "Cormorant Garamond";
-    font-size: 4.8rem;
-    font-weight: 500;
-    line-height: 0.8;
+    font: italic 500 4.8rem/0.8 "Cormorant Garamond";
     padding-right: 10px;
   }
 
@@ -73,12 +62,4 @@
   ul > li > ul {
     margin-block-end: 0;
   }
-
-  /* are these needed? 
-  @mixin atMinHeight389 {
-    position: relative;
-  }
-  @mixin atMinHeight550 {
-    position: relative;
-  }*/
 }
