--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,6 +1,5 @@
 .wrapper {
-  padding-left: 18px;
-  padding-right: 18px;
+  padding: 0 18px;
 
   &--site-header {
     display: flex;
@@ -32,9 +31,9 @@
       margin-left: 0;
     }
     &__video {
-      padding: 10px 0px; /*t/b r/l*/
+      padding: 10px 0px;
       @mixin atMin1200Wide {
-        padding: 20px 5px 20px 5px; /*t r b l*/
+        padding: 20px 5px 20px 5px;
       }
     }
   }
@@ -57,16 +56,14 @@
       align-items: center;
       max-width: 340px;
       background-color: #fff;
+      transition: border-radius 0.1s $cb-ease-in-out;
       &:hover {
         border-radius: 5%;
-        transition: border-radius 0.1s $cb-ease-in-out;
       }
       &:focus-visible {
         border-radius: 5%;
-        transition: border-radius 0.1s $cb-ease-in-out;
         div {
           border-radius: 5%;
-          transition: border-radius 0.1s $cb-ease-in-out;
         }
       }
     }
@@ -90,9 +87,9 @@
     padding: 10px 10px 20px 10px;
     background-color: white;
     color: $bodyLiteBGFontColor;
+    transition: border-radius 0.1s $cb-ease-in-out;
     &:hover {
       border-radius: 5%;
-      transition: border-radius 0.1s $cb-ease-in-out;
     }
     img {
       max-height: 213px;
@@ -110,7 +107,6 @@
 
   &--album-slideshow {
     position: absolute;
-    /*height: calc(100vh - $horizontalMenuBarHeight);*/
     height: 100vh;
     width: 100%;
     top: $horizontalMenuBarHeight;
@@ -137,7 +133,6 @@
 
   @mixin atMin820Wide {
     &--album {
-      /*top: 30px; 2/21/25*/
       max-width: 820px;
       &--pull-left {
         margin-left: auto;
@@ -165,7 +160,6 @@
       width: 1000px;
     }
     &--album {
-      /*top: 30px; 2/21/25*/
       max-width: 1200px;
       &--pull-left {
         margin-left: auto;
@@ -198,7 +192,6 @@
       width: 1700px;
     }
     &--album {
-      /*top: 30px; 2/21/25*/
       max-width: 1700px;
       &--pull-left {
         margin-left: auto;
