--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /*border: 1px solid yellow;*/
   }
 
   &--site-footer {
@@ -212,7 +213,7 @@
     max-width: inherit;
     font-size: 1rem;
     @mixin atMin1200Wide {
-      max-width: 1075px;
+      max-width: 1000px;
     }
     @mixin atMin2000Wide {
       max-width: 1200px;
