--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -29,7 +29,7 @@ body,
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Proza Libre", sans-serif;
 }
 
 body.dark {
@@ -66,6 +66,10 @@ img {
 img.logo {
   width: 220px;
   height: 53px;
+}
+img.tagline {
+  width: 215px;
+  height: 20px;
 }
 
 * {
