--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -24,6 +24,7 @@
   }
 
   &__breadcrumb {
+    font-family: $menuFont;
     position: fixed;
     margin: 0;
     transform: translateY(0);
@@ -64,7 +65,7 @@
 
   &__menu-dropdown {
     position: fixed;
-    top: 88px;
+    top: 100px; /*88px*/
     left: 0;
     width: 100%;
     visibility: hidden;
@@ -147,11 +148,11 @@
     }
   }
   @mixin atMinWidthToHideMenuIcon {
-    padding: 12.5px 0;
+    padding: 8.4px 0; /*12.5*/
   }
 
   &__logo {
-    padding-top: 17px;
+    padding-top: 0; /*17px*/
     border: 0;
     /*border: 1px solid yellow;*/
     width: 220px;
