--- a/app/assets/styles/modules/_page.css
+++ b/app/assets/styles/modules/_page.css
@@ -43,12 +43,12 @@
   }
   p.dropCap::first-letter {
     float: left;
-    font: 500 4.9rem/0.8 "Cormorant Garamond";
+    font: 500 4.9rem/0.8 $headersFont;
     padding-right: 4px;
   }
   p.dropCapNote::first-letter {
     float: left;
-    font: italic 500 4.8rem/0.8 "Cormorant Garamond";
+    font: italic 500 4.8rem/0.8 $headersFont;
     padding-right: 10px;
   }
 
