--- a/app/assets/styles/modules/_nav.css
+++ b/app/assets/styles/modules/_nav.css
@@ -1,4 +1,5 @@
 .nav {
+  font-family: $menuFont;
   &--pull-right {
     padding-top: 90px;
   }
@@ -96,7 +97,6 @@
       height: 100vh;
       max-height: calc(100vh - 90px);
       opacity: 1;
-      background: rgba(0, 0, 0, 0.9);
       background-color: $HeaderFooterLiteBackground;
 
       &--dark {
@@ -126,14 +126,6 @@
       text-align: center;
       padding-top: 20px;
     }
-    &--is-visible {
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 1;
-      transform: scale(1);
-      background: rgba(0, 0, 0, 0.9);
-    }
 
     &--collapse {
       top: -70px;
@@ -162,7 +154,7 @@
       float: left;
       padding-top: 0;
       border-top: none;
-      font-size: 1.2rem;
+      font-size: 2.2rem;
       height: 45px;
     }
     li:first-child {
@@ -170,7 +162,7 @@
     }
 
     &__button {
-      font: 500 1.45rem/1.25 $globalFontFamily;
+      font: 500 1.45rem/1.25 $menuFont;
       &--dark {
         text-decoration-color: $bodyDarkBGFontColor;
       }
