Remove unused variable; add new variables

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,4 +1,6 @@
-$globalFontFamily: "Roboto", sans-serif;
+$globalFontFamily: "Proza Libre", sans-serif;
+$menuFont: "Roboto", sans-serif;
+$headersFont: "Cormorant Garamond", serif;
 $bodyDarkBGColor: #080a0d;
 $bodyLiteBGColor: #fff;
 $bodyLiteBGFontColor: #000;
@@ -12,7 +14,9 @@ $HeaderFooterDarkBackground: #000;
 $HeaderFooterLiteBackground: #ebecf0;
 $HeaderFooterDarkBackgroundTransparent: rgba(0, 0, 0, 0.5);
 $lightboxPhotoOverlayBackgroundColor: #000;
-$lightboxImageOverlayBackgroundColor: rgba(255, 255, 255, 0.8);
+$lightboxImageOverlayBackgroundColor: rgba(0, 0, 0, 0.8);
+$lightboxCloseBtnBGColor: rgba(0, 0, 0, 0.3);
+$lightboxCloseBtnBGFocus: rgba(0, 0, 0, 0.8);
 $albumSlideshowHeaderBackground: rgba(0, 0, 0, 0.5);
 $menuButtonOutlineTransition: 0.2s;
 $menuVisibilityTransition: 0.3s;
@@ -23,8 +27,9 @@ $cb-ease-out: cubic-bezier(0, 0, 0.58, 1);
 $cb-ease-in: cubic-bezier(0.4, 0, 1, 1);
 $slideTransition: 1s;
 $photoCaptionTransition: 0.5s;
-$vcrButtonColor: #ff0000;
-$vcrButtonHoverColor: #ff0000;
+$vcrButtonContainerBackground: rgba(0, 0, 0, 0.5);
+$vcrButtonOutlineColor: #ff0000;
+$vcrContainerOutlineColor: yellow;
 $albumPhotoCaptionBackgroundColor: rgba(255, 255, 255, 0.4);
 $albumPhotoCaptionBackgroundHoverColor: rgba(0, 0, 0, 0.1);
 $horizontalMenuBarHeight: 100px;
