--- a/app/assets/styles/modules/_lightbox.css
+++ b/app/assets/styles/modules/_lightbox.css
@@ -8,7 +8,7 @@
     left: 3800px;
     bottom: -100px;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: $HeaderFooterDarkBackgroundTransparent;
 
     &--visible {
       right: 30px;
@@ -66,6 +66,7 @@
       font-size: 1.5rem;
       inline-size: 20ch;
       padding: 5px 15px;
+      color: #fff;
 
       @mixin atMin620Wide {
         inline-size: 35ch;
@@ -95,11 +96,11 @@
       border: 0;
       outline: 0;
       svg {
-        fill: rgba(0, 0, 0, 0.3);
+        fill: $lightboxCloseBtnBGColor;
       }
       &:focus {
         svg {
-          fill: rgba(0, 0, 0, 0.8);
+          fill: $lightboxCloseBtnBGFocus;
         }
         path {
           stroke-width: 2.5px;
@@ -141,7 +142,7 @@
       outline: 0;
       &:focus {
         svg {
-          fill: rgba(0, 0, 0, 0.8);
+          fill: $lightboxCloseBtnBGFocus;
         }
         path {
           stroke-width: 2.5px;
@@ -152,7 +153,7 @@
     &__close-svg {
       height: 48px;
       width: 48px;
-      fill: rgba(255, 255, 255, 0.5);
+      fill: $lightboxCloseBtnBGColor;
       overflow: visible;
       z-index: 2;
       cursor: pointer;
@@ -162,14 +163,14 @@
         stroke-linecap: round;
       }
       &:hover {
-        fill: rgba(0, 0, 0, 0.8);
+        fill: $lightboxCloseBtnBGFocus;
         path {
           stroke-width: 2.5px;
         }
       }
       &:focus-within {
         stroke-width: 2.5px;
-        fill: rgba(0, 0, 0, 0.8);
+        fill: $lightboxCloseBtnBGFocus;
       }
     }
 
