--- a/app/assets/styles/modules/_album-photos.css
+++ b/app/assets/styles/modules/_album-photos.css
@@ -21,7 +21,7 @@
     transform: translateY(-50%);
     padding: 5px 20px 5px 3px;
     border-radius: 0 5px 5px 0;
-    font: 700 2rem "Tangerine", sans-serif;
+    font: 700 1.5rem $headersFont;
     text-align: center;
     background: $albumPhotoCaptionBackgroundColor;
     opacity: 1;
