Add new variables for z-Index levels 3, 4, and 5 required due to adding a background image on home page

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -37,3 +37,6 @@ $verticalMenuBarWidth: 320px;
 $zIndex--1-BelowAll: -1;
 $zIndex-1-FirstLevel: 1;
 $zIndex-2-SecondLevel: 2;
+$zIndex-3-ThirdLevel: 3;
+$zIndex-4-FourthLevel: 4;
+$zIndex-5-FifthLevel: 5;
