--- a/app/assets/styles/modules/_page.css
+++ b/app/assets/styles/modules/_page.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  &__home {
+    background-image: radial-gradient(ellipse at bottom, #080a0d 5%, transparent 60%), linear-gradient(136deg, transparent, #e8e8e8 290%), linear-gradient(115deg, #080a0d, transparent 40%), linear-gradient(180deg, transparent 0, #080a0d 70%), radial-gradient(ellipse at bottom, #080a0d 40%, transparent 80%), radial-gradient(ellipse at 5% 340%, transparent 80%, #f5f5f5 0);
+  }
 
   p {
     font-size: 1.4rem;
