--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -12,7 +12,7 @@
     width: 100%;
     padding: 0 18px;
     z-index: $zIndex-3-ThirdLevel;
-    text-align: center;
+    /*text-align: center;*/
     text-shadow: 3px 3px 2px black;
     &__image {
       margin-top: 0;
